--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="story">
           <p class="text-center">ある日突然、爆音でパソコンに一通のメールが届いた。<br>
             私には数年前、急に行方不明になってしまった友人がいる。<br>
-            調査したが、噂の出どころはわからない。<br>
-            そんな矢先、某有名預言者ノストラエヌスが、「このままだと家庭科室が原因で、学校が滅びるだろう」と予言。<br>
+            もしかしたらそのメールは友人を見つける情報が書いてあるかもしれない…！！<br>
+            そう思いメールに貼られていたURLを開いてしまった・・・<br>
             生徒に人気のS先生が一人で調査に入ったが、いつまでも帰ってこない。<br>
             不思議に思った生徒会長の君は、副会長の伊計島太郎と茨つくはの<br>
             ２名を連れて家庭科室の前に来たが、ドアが開かない。<br>
