--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
             そう思いメールに貼られていたURLを開いてしまった・・・<br>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-              <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
-              <li>30分を超えるとS先生は出てこられない</li>
+              <li>〇〇分以内にコインを全部集めて、このゲームをクリアしないとパソコンでこのゲームしか使えなくなってしまうで😘😓😓</li>
             </ul>
           </div>
-          <p class="text-center">いつの間にか、タイマーが起動した。29:58、29:57・・・急がなきゃ。<br>
-            まずはこの暗号を解かなくては！</p>
+          <p class="text-center">自称ゲームクリエイターと名乗る者からのメッセージにはこう書かれていた<br>
+            どうやらゲームをクリアしないとこの（私が買った受注生産の推しグッズ）高級PCが使えなくなってしまう、、どうやらクリアしないといけないようだ・・・</p>
         </div>
       </div>
     </section>
