--- a/main.html
+++ b/main.html
@@ -86,9 +86,9 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">家庭科室の扉が開いた！<br>
+              <div class="clear-message__content">１ステージ目は思ったよりも簡単にクリアできてしまった！！<br>
                 さぁ先生を助けるため<br>
-                ３つステージの謎をとき、暗号を見つけ出そう！</div>
+                土管に入ればクリアみたい😏</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -108,9 +108,9 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">家庭科室に入ることができた！<br>
-                すぐに目に入ったのは黒板にある４つの謎。<br>
-                これらを解くことで、きっと次のステップに繋がるはずだ！</p>
+              <p class="text-center">土管に入ると部屋に繋がっていた。<br>
+                実はこの問題を解くところまでがステージ１だったらしい…<br>
+                「この部屋をでるには謎を解け」という紙が貼ってある。その下には何か置かれている</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -182,8 +182,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">黒板の指示に従い、<br>
-                次のステージの謎を解こう！</div>
+              <div class="clear-message__content">無事（ようやく）謎を解いて次のステージに進めた！<br>
+                またさっきやったマリモに追いかけられるゲームが始まった・・・</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -199,9 +199,8 @@ Youtube貼り付けここまで -->
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">黒板から得たメッセージは、「食物の廃棄問題」だった。<br>
-              どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
-              これらを解決するための最後の謎を解いていこう！</p>
+            <p class="text-center">マリモにしつこく追いかけられて別の部屋に避難したがまた謎解き部屋に繋がっていた。<br>
+             この部屋も謎を解かないと出られないらしい...<br>
             <figure class="image__container">
               <img src="assets/images/stage.png" alt="">
             </figure>
