--- a/final.html
+++ b/final.html
@@ -17,7 +17,7 @@
   </header>
   <main class="main final-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-image.png" alt="スーパーマリモブラザーズからの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/IMG_2075.jpg" alt="スーパーマリモブラザーズからの脱出"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
