--- a/main.html
+++ b/main.html
@@ -106,7 +106,7 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>土管の中の謎を解け！</h2>
               <p class="text-center">土管に入ると部屋に繋がっていた。<br>
                 実はこの問題を解くところまでがステージ１だったらしい…<br>
                 「この部屋をでるには謎を解け」という紙が貼ってある。その下には何か置かれている</p>
@@ -197,7 +197,7 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>最後の謎</h2>
             <p class="text-center">マリモにしつこく追いかけられて別の部屋に避難したがまた謎解き部屋に繋がっていた。<br>
              この部屋も謎を解かないと出られないらしい...<br>
             <figure class="image__container">
