--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/stage.png" alt="">
+                <img src="assets/images/IMG_2091.PNG" alt="">
               </figure>
                 
  <!--  YouTube貼り付け
