--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
             <p class="text-center">メッセージを閉じたらいきなりゲームが始まった<br>
-              しばらく順調に進んでいたが、いきなり目の端にカラフルなものが写った・・と思ったら,マリモだった…？！！
+              しばらく順調に進んでいたが、いきなり目の端にカラフルなものが写った・・・「答えはマリモ」だった…？！！
 そうかこれはタイトルにもあった通り、マリモの大群（兄弟）に追いかけられるゲームなのか！と考えていたら、マリモにぶつかってしまった😇 どうやらこのゲームはマリモに一度ぶつかると、スタート地点に戻ってきてしまうらしい</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
