--- a/hint2.html
+++ b/hint2.html
@@ -42,7 +42,9 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">テキストテキストテキストテキストテキスト</p>
+              <p class="card__content">・飢（うえ）＝上↑を読む
+・全＝そのまま全部読む
+・舌（した）＝下↓を読む</p>
             </div>
               
  <!-- 2-2ヒント追加
@@ -63,7 +65,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">いいい</p>
+              <p class="card__content">まもる</p>
             </div>
               
 <!-- 2-2答え追加
