--- a/main.html
+++ b/main.html
@@ -201,7 +201,7 @@ Youtube貼り付けここまで -->
             <p class="text-center">マリモにしつこく追いかけられて別の部屋に避難したがまた謎解き部屋に繋がっていた。<br>
              この部屋も謎を解かないと出られないらしい...<br>
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="assets/images/184D2426-9CDF-498B-B73A-D00A63B9D5E8.jpeg" alt="">
             </figure>
           </div>
         </section>
