--- a/hint2.html
+++ b/hint2.html
@@ -65,7 +65,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">まもる</p>
+              <p class="card__content">数波</p>
             </div>
               
 <!-- 2-2答え追加
