--- a/hint2.html
+++ b/hint2.html
@@ -42,9 +42,9 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">・飢（うえ）＝上↑を読む
-・全＝そのまま全部読む
-・舌（した）＝下↓を読む</p>
+              <p class="card__content">口数、場数、数学、数珠
+              小波、寒波、波動、波風
+              答えは苗字になるよ。</p>
             </div>
               
  <!-- 2-2ヒント追加
