--- a/main.html
+++ b/main.html
@@ -130,7 +130,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="assets/images/184D2426-9CDF-498B-B73A-D00A63B9D5E8.jpeg" alt="">
+                    <img src="assets/images/スクリーンショット 2021-09-13 11.05.44.png" alt="">
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
