--- a/final.html
+++ b/final.html
@@ -31,7 +31,7 @@
     <section class="section">
       <div class="container">
           <figure class="image__container">
-             <img src="assets/images/おめでと.png" alt="">
+             <img src="assets/images/無題3 2.png" alt="">
           </figure>
 
 <!--  YouTube貼り付け
