--- a/final.html
+++ b/final.html
@@ -23,8 +23,8 @@
       <div class="container">
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、先生を救うことができた！<br>
-            そして先生からあるメッセージが伝えられた・・・</p>
+          <p class="text-center">ようやくゴールに辿り着いた！！！<br>
+ん？ゴールの扉に解いた謎が組み合わされている。やっぱり謎の答えは行方不明になった友人の名前だったんだ、、と考えていたら急にメッセージが流れ始めた。 </p>
         </div>
       </div>
     </section>
@@ -44,10 +44,8 @@ Youtube貼り付けここまで-->
           ß
       </div>
          -->
-        <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
-          この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">それでは、また会おう！</p>
+        <p class="text-center">・・・。<br>
+        <p class="text-center">・・・・・・・・。</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
