--- a/final.html
+++ b/final.html
@@ -24,7 +24,8 @@
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
           <p class="text-center">ようやくゴールに辿り着いた！！！<br>
-ん？ゴールの扉に解いた謎が組み合わされている。やっぱり謎の答えは行方不明になった友人の名前だったんだ、、と考えていたら急にメッセージが流れ始めた。 </p>
+ん？ゴールの扉（旗？）に解いた謎が組み合わされている、、？？これって、行方不明になった友人の名前じゃないか？！！まさかメールの差出人は友人なのか！？
+っと思ったらメッセージが流れてきた。</p>
         </div>
       </div>
     </section>
