--- a/hint2.html
+++ b/hint2.html
@@ -42,8 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">口数、場数、数学、数珠
-              小波、寒波、波動、波風
+              <p class="card__content">１、くち○ず　２、○どう
               答えは苗字になるよ。</p>
             </div>
               
