--- a/hint2.html
+++ b/hint2.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">１、くち○○　２、○どう
+              <p class="card__content">１、くち○○、じゅ○　２、○どう、さざ○○
               答えは苗字になるよ。</p>
             </div>
               
