--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             そう思いメールに貼られていたURLを開いてしまった・・・<br>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-              <li>〇〇分以内にコインを全部集めて、このゲームをクリアしないとパソコンでこのゲームしか使えなくなってしまうで😘😓😓</li>
+              <li>〇〇分以内にコインを全部集めて、このゲームをクリアしないとパソコンでこのゲームしか使えなくなってしまうで</li>
             </ul>
           </div>
           <p class="text-center">自称ゲームクリエイターと名乗る者からのメッセージにはこう書かれていた<br>
